--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,12 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     implementation 'com.github.ibrahimsn98:SmoothBottomBar:1.7'
     implementation "io.getstream:avatarview-coil:1.0.4"
+    // retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    // GSON
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    // coroutine
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
 }
